force-app/main/default/objects/TL_Est_SubdivisionEntry__c/TL_Est_SubdivisionEntry__c.object-meta.xml
<CustomObject>
    <label>Subdivision Entry</label>
    <nameField>
        <displayFormat>SDE-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subdivision Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>