force-app/main/default/objects/TL_Est_SubdivisionEntry__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <referenceTo>TL_Est_DivisionEntry__c</referenceTo>
    <relationshipName>Subdivisions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>