force-app/main/default/objects/TL_Est_SubdivisionEntry__c/fields/Subdivision__c.field-meta.xml
<CustomField>
    <fullName>Subdivision__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subdivision</label>
    <referenceTo>TL_Est_SubdivisionTemplate__c</referenceTo>
    <relationshipLabel>Subdivision Entries</relationshipLabel>
    <relationshipName>Subdivision_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>